WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207114
\0 identity escapes should be syntax errors in Unicode patterns only
https://bugs.webkit.org/show_bug.cgi?id=207114
Summary
\0 identity escapes should be syntax errors in Unicode patterns only
Alexey Shvayka
Reported
2020-02-03 07:22:22 PST
Test case: new RegExp("\\\0", "u") Expected: SyntaxError thrown Actual: RegExp instance ECMA262:
https://tc39.es/ecma262/#prod-annexB-IdentityEscape
(/u flag precludes the use of SourceCharacterIdentityEscape) IdentityEscape[U, N] :: [~U] SourceCharacterIdentityEscape[?N] SourceCharacterIdentityEscape[N] :: [~N] SourceCharacter but not c SourceCharacter :: any Unicode code point Test262:
https://test262.report/browse/built-ins/RegExp/unicode_restricted_identity_escape.js
Attachments
Patch
(3.49 KB, patch)
2020-02-03 07:49 PST
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-02-03 07:49:25 PST
Created
attachment 389508
[details]
Patch
WebKit Commit Bot
Comment 2
2020-02-03 13:22:54 PST
The commit-queue encountered the following flaky tests while processing
attachment 389508
[details]
: editing/spelling/spellcheck-async-remove-frame.html
bug 158401
(authors:
morrita@google.com
,
rniwa@webkit.org
, and
tony@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2020-02-03 13:23:24 PST
Comment on
attachment 389508
[details]
Patch Clearing flags on attachment: 389508 Committed
r255584
: <
https://trac.webkit.org/changeset/255584
>
WebKit Commit Bot
Comment 4
2020-02-03 13:23:26 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-02-03 13:24:19 PST
<
rdar://problem/59122942
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug