\0 identity escapes should be syntax errors in Unicode patterns only https://bugs.webkit.org/show_bug.cgi?id=207114

Reviewed by Darin Adler.

JSTests:

* test262/expectations.yaml: Mark 2 test cases as passing.

Source/JavaScriptCore:

This change adds a separate check for null character because `strchr`
always returns a non-null pointer when called with '\0' as second argument.

Grammar: https://tc39.es/ecma262/#prod-annexB-IdentityEscape
(/u flag precludes the use of SourceCharacterIdentityEscape)

* yarr/YarrParser.h:
(JSC::Yarr::Parser::isIdentityEscapeAnError):


Canonical link: https://commits.webkit.org/220136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255584 268f45cc-cd09-0410-ab3c-d52691b4dbfc